--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,6 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.critic
   - pymdownx.caret
-  - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
   - pymdownx.tasklist
@@ -108,4 +107,12 @@ nav:
   - Tools:
     - RSDK Anim Editor:
       - Tools/RSDK-Anim-Editor/README.md
+    - RetroED:
+      - Tools/RetroED/README.md
+  - Guides:
+    - RetroED:
+      - Guides/RetroED-Guide.md
+      - Contents:
+        - Animation Editor: Guides/RetroED-Guide/RetroED-AnimEditor.md
+        - Scene Editor: Guides/RetroED-Guide/RetroED-ScnEditor.md
 
