--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ theme:
   name: material
   logo: assets/RSDK_Logo.svg
   favicon: assets/RSDK_Icon_Color.svg
+  icon:
+    repo: fontawesome/brands/github
   features:
     - navigation.instant
     - navigation.indexes
