--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -489,6 +489,20 @@ nav:
         - Mod Setup: Guides/RSDKv5/Decompilation/ModSetup.md
         - Mod Formatting: Guides/RSDKv5/Decompilation/ModFormatting.md
         - Shaders Setup: Guides/RSDKv5/Decompilation/ShadersSetup.md
+    - Games:
+      - Guides/Games/README.md
+      - Sonic CD:
+        - Guides/Games/SonicCD/README.md
+        - Obtaining the Datapack: Guides/Games/SonicCD/Datapack.md
+      - Sonic 1 & 2:
+        - Guides/Games/Sonic1-2/README.md
+        - Obtaining the Datapacks: Guides/Games/Sonic1-2/Datapack.md
+      - Sonic Mania:
+        - Guides/Games/SonicMania/README.md
+        - Obtaining the Datapack: Guides/Games/SonicMania/Datapack.md
+      - Sonic 3 & Knuckles:
+        - Guides/Games/Sonic3K/README.md
+        - Obtaining the Datapack: Guides/Games/Sonic3K/Datapack.md
     - RetroED:
       - Guides/RetroED/README.md
       - Editors:
