--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,24 @@ extra_css:
   - rsdk_theme/body.css
 extra_javascript:
   - rsdk_theme/background.js
+  
+plugins:
+  - glightbox:
+      touchNavigation: true
+      loop: false
+      effect: zoom
+      slide_effect: fade
+      width: 100%
+      height: auto
+      zoomable: true
+      draggable: true
+      skip_classes:
+        - custom-skip-class-name
+      auto_caption: false
+      caption_position: bottom
+      background: white
+      shadow: true
+      manual: true
 
 markdown_extensions:
   - abbr
