Re-enable search
Not sure why it turns off when you enable other plug-ins by default but whatever

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ extra_javascript:
   - rsdk_theme/background.js
 
 plugins:
+  - search
   - glightbox:
       touchNavigation: true
       loop: false
