Restructure images paths
The idea is that images should be organized by the game/tool/etc it's of, not the page it's made for. Allows for using the same image with multiple pages while keeping things tidy and without needing to store duplicates (as I was doing with the Filza Favorites screenshot before).

Also added mkdocs-site-urls to allow for paths to be relative to the `docs` folder instead of the current document path if the path begins with `site:`.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ extra_javascript:
 
 plugins:
   - search
+  - site-urls
   - glightbox:
       touchNavigation: true
       loop: false
@@ -514,16 +515,16 @@ nav:
       - Guides/Games/README.md
       - Sonic CD:
         - Guides/Games/SonicCD/README.md
-        - Obtaining the Datapack: Guides/Games/SonicCD/Datapack/README.md
+        - Obtaining the Datapack: Guides/Games/SonicCD/Datapack.md
       - Sonic 1 & 2:
         - Guides/Games/Sonic1-2/README.md
-        - Obtaining the Datapacks: Guides/Games/Sonic1-2/Datapack/README.md
+        - Obtaining the Datapacks: Guides/Games/Sonic1-2/Datapack.md
       - Sonic Mania:
         - Guides/Games/SonicMania/README.md
-        - Obtaining the Datapack: Guides/Games/SonicMania/Datapack/README.md
+        - Obtaining the Datapack: Guides/Games/SonicMania/Datapack.md
       - Sonic 3 & Knuckles:
         - Guides/Games/Sonic3K/README.md
-        - Obtaining the Datapack: Guides/Games/Sonic3K/Datapack/README.md
+        - Obtaining the Datapack: Guides/Games/Sonic3K/Datapack.md
     - RetroED:
       - Guides/RetroED/README.md
       - Using S3KOEditorLink: Guides/RetroED/S3KOEditorLink.md
