--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,9 @@ validation:
   links:
     absolute_links: relative_to_docs
 
+watch:
+  - includes
+
 plugins:
   - search
   - glightbox:
@@ -102,7 +105,9 @@ markdown_extensions:
       line_spans: __span
       pygments_lang_class: true
   - pymdownx.inlinehilite
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      auto_append:
+        - includes/abbreviations.md
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
