Add GraphicsGale page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -501,6 +501,7 @@ nav:
     - RetroED: Tools/RetroED/README.md
     - S3KOEditorLink: Tools/S3KOEditorLink/README.md
     - RSDK Animation Editor: Tools/RSDK-Anim-Editor/README.md
+    - GraphicsGale: Tools/GraphicsGale/README.md
 
   - Guides:
     - Guides/README.md
