--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: RSDK Modding Wiki
 site_description: Retro Engine modding guides and tools
+site_url: https://rsdkmodding.com
 repo_url: https://github.com/RSDKModding/RSDK-Modding-Wiki
 repo_name: RSDK-Modding-Wiki
 copyright: Not affiliated with Evening Star or SEGA
