--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ copyright: Not affiliated with Evening Star or SEGA
 theme:
   name: material
   custom_dir: overrides
+  logo: assets/favicon.svg
   favicon: assets/favicon.svg
   icon:
     logo: rsdk/logo
