Add my name in .authors.yml

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -4,3 +4,8 @@ authors:
     description: RSDK Modder, Decompilation Maintainer
     avatar: https://github.com/megami24.png
     url: https://github.com/megami24
+  mefiresu:
+    name: Mefiresu
+    description: Decompilation Maintainer
+    avatar: https://github.com/mefiresu.png
+    url: https://github.com/mefiresu
