--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -8,9 +8,14 @@ on:
     branches:
       - master
 
+env:
+  CI: True
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -19,5 +24,5 @@ jobs:
         with:
           python-version: 3.x
       - run: git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
-      - run: pip install mkdocs-material mkdocs-glightbox
+      - run: pip install mkdocs-material mkdocs-glightbox mkdocs-git-committers-plugin-2 mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
