--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -3,6 +3,8 @@ on:
   push:
     paths:
       - docs/**
+      - overrides/**
+      - includes/**
       - .github/github-pages-deploy.yml
       - mkdocs.yml
     branches:
