--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,12 +81,16 @@ plugins:
   - git-committers:
       enabled: !ENV [CI, false]
       repository: RSDKModding/RSDK-Modding-Wiki
-      # can add an "exclude" list here
+      exclude:
+        - README.md
+        - blog/**
   - git-revision-date-localized:
       enabled: !ENV [CI, false]
       enable_creation_date: true
-      # can add an "exclude" list here
       type: timeago
+      exclude:
+        - README.md
+        - blog/**
 
 markdown_extensions:
   - abbr
