--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,8 +137,7 @@ markdown_extensions:
 nav:
   - Home: README.md
   - Retro Engine:
-    - Intro:
-      - Intro/README.md
+    - RSDK/README.md
 
     - RSDKv1:
       - RSDKv1/README.md
