--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,6 +152,7 @@ nav:
         - Overview:
           - RSDKv3/Overview/README.md
           - Dev Menu: RSDKv3/Overview/DevMenu.md
+        - Variables: RSDKv3/Variables.md
         - Subs: RSDKv3/Subs.md
         - Functions:
           - RSDKv3/Functions/README.md
