Add previous/next navigation footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
     - content.code.copy
     - content.tabs.link
     - content.tooltips
+    - navigation.footer
     - navigation.indexes
     - navigation.instant
     - navigation.sections
