--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ plugins:
         - RSDKv3
         - RSDKv4
         - RSDKv5
+        - RetroED
   - blog:
       categories_allowed:
         - Decompilations
